RESOLVED FIXED272598
[WebGPU] Generated dynamic offsets are incorrect in generated metal source
https://bugs.webkit.org/show_bug.cgi?id=272598
Summary [WebGPU] Generated dynamic offsets are incorrect in generated metal source
Mike Wyrzykowski
Reported 2024-04-12 11:36:24 PDT
Open https://playcanvas.github.io/#/misc/spineboy Observe the generated metal source: const constant __type0_Packed& global1 = (*(const constant __type0_Packed*)(((constant uint8_t*)&(__ArgumentBuffer_0.global1)) + __DynamicOffsets[0u])); const constant __type1_Packed& global5 = (*(const constant __type1_Packed*)(((constant uint8_t*)&(__ArgumentBuffer_1.global5)) + __DynamicOffsets[0u])); both argument buffers are using the same offset (0), which is wrong, the first should be offset 0 and the second should be offset 1
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-12 11:36:52 PDT
EWS
Comment 2 2024-04-12 14:57:19 PDT
Committed 277439@main (02e0f7667792): <https://commits.webkit.org/277439@main> Reviewed commits have been landed. Closing PR #27202 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.