[WebGPU] Generated dynamic offsets are incorrect in generated metal source https://bugs.webkit.org/show_bug.cgi?id=272598 <radar://126365605>

Reviewed by Tadeu Zagallo.

Dynamic offsets wasn't working for more than one bind group,
because we weren't accumulating the offset from the previous bind group.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::convertPipelineLayout):

Canonical link: https://commits.webkit.org/277439@main